--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.9",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
     "@sanity/ui": "^1.8.2",
