--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/ui": "^1.8.2",
     "next": "13.5.4",
     "next-sanity": "^5.5.5",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.13.0"
